Make TextFeed scrollable with the scrollbar hidden

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Overlay Scrollbars -->
+    <link type="text/css" href="path/to/OverlayScrollbars.css" rel="stylesheet"/>
+    <script type="text/javascript" src="path/to/OverlayScrollbars.js"></script>
+
     <title>React App</title>
   </head>
   <body>
