Redesign the styles for the entire application

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <!-- Overlay Scrollbars -->
     <link type="text/css" href="path/to/OverlayScrollbars.css" rel="stylesheet"/>
     <script type="text/javascript" src="path/to/OverlayScrollbars.js"></script>
-
+    <script type="text/javascript" src="path/to/OverlayScrollbars.js"></script>
+    <link type="text/css" href="src/appStyles.css" rel="stylesheet"/>
     <title>React App</title>
   </head>
   <body>
