--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link type="text/css" href="src/appStyles.css" rel="stylesheet"/>
+    <link type="text/css" href="src/css/App.css" rel="stylesheet"/>
     <title>React App</title>
   </head>
   <body>
