Change page title

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link type="text/css" href="src/css/App.css" rel="stylesheet"/>
-    <title>React App</title>
+    <title>Realms of Antares</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
