--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/app_icon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <link type="text/css" href="src/css/App.css" rel="stylesheet"/>
     <title>Realms of Antares</title>
   </head>
